fixed annoucement alignment on the home page

--- a/template.css
+++ b/template.css
@@ -41,7 +41,6 @@ h1 {
 }
 h2 {
     font-size: 20pt;
-    margin-right: 107px;
     font-weight: 400;
 }
 
